Add category suggestion feature
